cnpg-use/cnpg-cluster-init/k8s/restrict-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: restrict-egress-cnpg-${APP_NAME}-${CLUSTER_BRANCH_NAME_INIT}
  namespace: ${NAMESPACE}
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: cnpg-${APP_NAME}-${CLUSTER_BRANCH_NAME_INIT}
  egress:
  - # GCS for cnpg backup
    toFQDNs:
      - matchPattern: "*.googleapis.com"
  - # Replication
    toEndpoints:
      - matchLabels:
          cnpg.io/cluster: cnpg-${APP_NAME}-${CLUSTER_BRANCH_NAME_INIT}
